--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-   <head>
-      <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "2; url = https://www.google.com" />
-   </head>
-   <body>
-      
-  </body>
-</html>
+<meta http-equiv="refresh" content="2;url=https://www.google.com/" />
