--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<meta http-equiv="refresh" content="2;url=https://www.google.com/" />
+<?php 
+  
+// Redirect browser 
+header("Location: https://www.google.com"); 
+  
+exit; 
+?> 
